2022-11-11T08:29:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3443594928 # 605
* notice: last 14d: unq all: 8 13
* notice: prev accum: outdated-unq outdated-all / unq all: 151 613 / 157 623
* notice: next accum: outdated-unq outdated-all / unq all: 152 615 / 160 628
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [2022-10-28] / [2022-11-11]

2022-11-10T01:58:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3433366000 # 601
* notice: last 14d: unq all: 6 10
* notice: prev accum: outdated-unq outdated-all / unq all: 149 611 / 156 622
* notice: next accum: outdated-unq outdated-all / unq all: 151 613 / 157 623
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-26] / []

2022-11-09T16:30:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429972778 # 600
* notice: last 14d: unq all: 7 11
* notice: prev accum: outdated-unq outdated-all / unq all: 149 611 / 157 623
* notice: next accum: outdated-unq outdated-all / unq all: 149 611 / 156 622
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-26]

2022-11-09T02:05:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424748232 # 598
* notice: last 14d: unq all: 8 12
* notice: prev accum: outdated-unq outdated-all / unq all: 148 609 / 157 623
* notice: next accum: outdated-unq outdated-all / unq all: 149 611 / 157 623
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-25] / []

2022-11-08T08:30:25Z: