@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-11T08:29:51Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
+  "timestamp" : "2022-11-11T16:30:10Z",
+  "count" : 7,
+  "count_minmax" : [ 5, 7 ],
+  "count_decinc" : [ -0, +7 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
