@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-11T08:29:51Z",
+  "timestamp" : "2022-11-11T16:30:10Z",
   "count_outdated" : 615,
   "uniques_outdated" : 152,
-  "count" : 628,
+  "count" : 630,
   "uniques" : 160,
   "views" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-11-11T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
+      "count": 7,
+      "count_minmax": [ 5, 7 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
     }
