@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 15,
   "uniques": 8,
   "views": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2022-11-11T00:00:00Z",
-      "count": 5,
+      "count": 7,
       "uniques": 3
     }
   ]
