@@ -1,3 +1,11 @@
+2022-11-11T16:30:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3446511792 # 606
+* notice: last 14d: unq all: 8 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 615 / 160 628
+* notice: next accum: outdated-unq outdated-all / unq all: 152 615 / 160 630
+* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +3 +7 -0 -0 / 3 7
+* notice: removed / changed dates: [] / [2022-11-11]
+
 2022-11-11T08:29:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3443594928 # 605
 * notice: last 14d: unq all: 8 13
